[project]
name = "project-package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "git-username", email = "git-email" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
project-package = "project_package:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
